--- a/views/index/not_connected.erb
+++ b/views/index/not_connected.erb
@@ -13,8 +13,8 @@
 	Pour profiter pleinement de ce service merci de vous connecter si vous possédez un compte ou de vous inscrire dans le cas contraire.</p>
 	
 	<ul>
-		<li><a href="/session">Connexion</a></li>
-		<li><a href="/register">Inscription</a></li>
+		<li><a href="/session/new">Connexion</a></li>
+		<li><a href="/register/new">Inscription</a></li>
 	</ul>
 	
 </body>
