--- a/sauth/views/index/not_connected.erb
+++ b/sauth/views/index/not_connected.erb
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Projet partie 1 : Authentification</title>
+	<title>Project part 1 : Authentification</title>
 	<link href="/style.css" rel="stylesheet" type="text/css" media="screen" />
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
 
-	<h1>Service d'authenfication</h1>
+	<h1><span class="right"><strong>Home</strong></span>Authentification service</h1>
 	
-	<p>Bonjour, vous n'êtes pas connecté.<br />
-	Pour profiter pleinement de ce service merci de vous connecter si vous possédez un compte ou de vous inscrire dans le cas contraire.</p>
+	<div id="content">
+		<p>Welcome, you are not login.<br />
+		To use this service, thank to login if you have an account or sign in else.</p>
 	
-	<ul>
-		<li><a href="/session/new">Connexion</a></li>
-		<li><a href="/register/new">Inscription</a></li>
-	</ul>
+		<ul>
+			<li><a href="/session/new">Log in</a></li>
+			<li><a href="/register/new">Registration</a></li>
+		</ul>
+	</div>
 	
 </body>
 </html>
