--- a/sauth/views/register/form.erb
+++ b/sauth/views/register/form.erb
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Projet partie 1 : Authentification</title>
+	<title>Project part 1 : Authentification</title>
 	<link href="/style.css" rel="stylesheet" type="text/css" media="screen" />
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
 
-	<h1>Service d'authenfication</h1>
+	<h1><span class="right"><a href="/">Home</a></span>Authentification service</h1>
 	
-	<% if @error_register.nil? %>
-		<p class="info">Merci de remplir le formulaire ci-dessous pour vous inscrire au service d'authentification.</p>
-	<% else %>
-		<p class="error">Erreur lors de l'inscription, veuillez vérifier vos informations.</p>
-	<% end %>
+	<div id="content">
+		<% if @error_register.nil? %>
+			<p class="info">Thank to filling the form below to register you.</p>
+		<% else %>
+			<p class="error">Error while registrating, thank you to check your informations.</p>
+		<% end %>
 	
-	<div id="inscription">
-		<h2>Inscription</h2>
+		<div class="bloc">
+			<h2>Inscription</h2>
 		
-		<form method="post" action="/register/new">
-			<div class="field<%= is_field_error(@error_register, :login) %>">
-				<%= get_field_error_message(@error_register, :login) %>
-				<label for="label_login">Identifiant :</label>
-				<input type="text" name="login" id="label_login" value="<%= get_field_value(:login) %>" placeholder="Login" required />
-			</div>
-			<div class="field<%= is_field_error(@error_register, :password) %>">
-				<%= get_field_error_message(@error_register, :password) %>
-				<label for="label_password">Mot de passe :</label>
-				<input type="password" name="password" id="label_password" value="<%= get_field_value(:password) %>" placeholder="Password" required />
-			</div>
-			<div class="field<%= is_field_error(@error_register, :password_confirmation) %>">
-				<%= get_field_error_message(@error_register, :password_confirmation) %>
-				<label for="label_password">Confirmation du mot de passe :</label>
-				<input type="password" name="password_confirmation" value="<%= get_field_value(:password_confirmation) %>" id="label_password" required />
-			</div>
-			<div class="field_button">
-				<input type="submit" value="S'inscrire" />
-			</div>
-		</form>
+			<form method="post" action="/register/new">
+				<div class="field<%= is_field_error(@error_register, :login) %>">
+					<%= get_field_error_message(@error_register, :login) %>
+					<label for="label_login">Username :</label>
+					<input type="text" name="login" id="label_login" value="<%= get_field_value(:login) %>" placeholder="Login" required />
+				</div>
+				<div class="field<%= is_field_error(@error_register, :password) %>">
+					<%= get_field_error_message(@error_register, :password) %>
+					<label for="label_password">Password :</label>
+					<input type="password" name="password" id="label_password" value="<%= get_field_value(:password) %>" placeholder="Password" required />
+				</div>
+				<div class="field<%= is_field_error(@error_register, :password_confirmation) %>">
+					<%= get_field_error_message(@error_register, :password_confirmation) %>
+					<label for="label_password">Password confirmation :</label>
+					<input type="password" name="password_confirmation" value="<%= get_field_value(:password_confirmation) %>" id="label_password" required />
+				</div>
+				<div class="field_button">
+					<input type="submit" value="Register" />
+				</div>
+			</form>
+		</div>
 	</div>
 	
 </body>
