--- a/sauth/views/session/form.erb
+++ b/sauth/views/session/form.erb
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Projet partie 1 : Authentification</title>
+	<title>Project part 1 : Authentification</title>
 	<link href="/style.css" rel="stylesheet" type="text/css" media="screen" />
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
 
-	<h1>Service d'authenfication</h1>
-	
-	<% if @error_session_message.nil? %>
-		<p class="info">Merci de remplir le formulaire ci-dessous pour vous connecter au service d'authentification.</p>
-	<% else %>
-		<p class="error">Erreur lors de la connexion. 
-		<% if @error_session_message == :session_not_exists %>
-			Le compte avec l'identifiant <strong><%= @login %></strong> n'existe pas. <a href="/register">Cliquez ici pour vous inscrire</a>.
+	<h1><span class="right"><a href="/">Home</a></span>Authentification service</h1>
+
+	<div id="content">
+		<% if @error_session_message.nil? %>
+			<p class="info">Thank to filling the form below to log in.</p>
 		<% else %>
-			Le mot de passe ne correspond pas &agrave; l'identifiant <strong><%= @login %></strong>
+			<p class="error">Error while logging :<br />
+			<% if @error_session_message == :session_not_exists %>
+				The account with the username <strong><%= params['login'] %></strong> does not exist. <a href="/register/new">Click here to register you</a>.
+			<% else %>
+				The password does not match with the username <strong><%= params['login'] %></strong>
+			<% end %>
+			</p>
 		<% end %>
-		</p>
-	<% end %>
 	
-	<div id="connexion">
-		<h2>Connexion</h2>
+		<div class="bloc">
+			<h2>Log in</h2>
 		
-		<form method="post" action="/session/new">
-			<div class="field">
-				<label for="label_login">Identifiant :</label>
-				<input type="text" name="login" id="label_login" placeholder="Login" required />
-			</div>
-			<div class="field">
-				<label for="label_password">Mot de passe :</label>
-				<input type="password" name="password" id="label_password" placeholder="Password" required />
-			</div>
-			<div class="field_button">
-				<input type="submit" value="Se connecter" />
-			</div>
-		</form>
+			<form method="post" action="<%= '/' + params['app_name'] unless params['app_name'].nil? %>/session/new">
+				<div class="field">
+					<label for="label_login">Username :</label>
+					<input type="text" name="login" id="label_login" placeholder="Login" required />
+				</div>
+				<div class="field">
+					<label for="label_password">Password :</label>
+					<input type="password" name="password" id="label_password" placeholder="Password" required />
+				</div>
+			
+				<input type="hidden" name="origin" value="<%= params['origin'] %>" />
+			
+				<div class="field_button">
+					<input type="submit" value="Log in" />
+				</div>
+			</form>
+		</div>
 	</div>
 	
 </body>
