Suppression de son compte

--- a/sauth/views/index/connected.erb
+++ b/sauth/views/index/connected.erb
@@ -15,7 +15,7 @@
 			<%= @flash %>
 		<% end %>
 	
-		<p><span class="right"><a href="session/destroy">Logout</a></span>Welcome <strong><%= current_username %></strong>. This is your account page configuration.</p>
+		<p><span class="right"><a href="session/logout">Logout</a> | <a href="/session/destroy">Destroy his account</a></span>Welcome <strong><%= current_username %></strong>. This is your account page configuration.</p>
 	
 		<div class="bloc">
 			<h2>Applications which use your account</h2>
