--- a/sauth/views/index/not_connected.erb
+++ b/sauth/views/index/not_connected.erb
@@ -19,8 +19,8 @@
 		To use this service, thank to login if you have an account or sign in else.</p>
 	
 		<ul>
-			<li><a href="/session/new">Log in</a></li>
-			<li><a href="/register/new">Registration</a></li>
+			<li><a href="/sessions/new">Log in</a></li>
+			<li><a href="/members/new">Registration</a></li>
 		</ul>
 	</div>
 	
