--- a/sauth/views/index/connected.erb
+++ b/sauth/views/index/connected.erb
@@ -53,7 +53,7 @@
 								&nbsp;&nbsp;# Access refused<br />
 								&nbsp;&nbsp;'You cannot access to this section !'
 								else<br />
-								&nbsp;&nbsp;redirect 'http://localhost:9090/<%= app.name %>/session/new?origin=' + request.path<br />
+								&nbsp;&nbsp;redirect 'http://localhost:9090/<%= app.name %>/sessions/new?origin=' + request.path<br />
 								end
 							</span>
 						</li>
